flink 180 plugin config